--- a/PilkadaJateng/Storyboards/InformasiPilkada.storyboard
+++ b/PilkadaJateng/Storyboards/InformasiPilkada.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0Hg-v2-udA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jod-rv-QkQ">
+    <device id="retina3_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,9 +13,9 @@
         <!--INFORMASI PILKADA-->
         <scene sceneID="AGg-tT-2Kk">
             <objects>
-                <viewController id="0Hg-v2-udA" userLabel="INFORMASI PILKADA" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="vJe-Cn-wew">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <viewController id="0Hg-v2-udA" userLabel="INFORMASI PILKADA" customClass="InformasiPilkadaViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vJe-Cn-wew" customClass="InformasiPilkadaView" customModule="PilkadaJateng" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYS-by-Du7">
@@ -25,18 +29,100 @@
                                 <state key="normal" title="Partisipasi"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="65n-Ny-RTI">
-                                <rect key="frame" x="145" y="329" width="30" height="30"/>
+                                <rect key="frame" x="131" y="329" width="58" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Alur"/>
+                                <state key="normal" title="Tahapan"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="qWl-W6-Val"/>
+                        <connections>
+                            <outlet property="anggaranPilkadaButton" destination="kYS-by-Du7" id="CKw-nS-0rd"/>
+                            <outlet property="partisipasiPilkadaButton" destination="kAE-Y6-wn7" id="BFT-Ks-hOH"/>
+                            <outlet property="tahapanPilkadaButton" destination="65n-Ny-RTI" id="Zya-iT-4ej"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="UYF-1c-uje">
+                        <barButtonItem key="leftBarButtonItem" title="Batal" id="xtL-tz-JhT">
+                            <connections>
+                                <segue destination="0Jr-Y5-Spo" kind="unwind" unwindAction="unwindInformasiViewController:" id="Lqc-Ia-Azk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="viewOutlets" destination="vJe-Cn-wew" id="JCW-y4-hz2"/>
+                        <segue destination="sXM-Nr-wrk" kind="show" identifier="InfoPartisipasiViewController" id="XNd-gd-S9r"/>
+                        <segue destination="fKx-wG-ScQ" kind="show" identifier="InfoAnggaranViewController" id="5nc-99-bag"/>
+                        <segue destination="J9A-jQ-YZd" kind="show" identifier="InfoTahapanViewController" id="yZE-AN-N8g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r71-jv-3J7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="0Jr-Y5-Spo" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-467" y="1776"/>
+            <point key="canvasLocation" x="124" y="2460"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="amJ-Dj-ZOz">
+            <objects>
+                <viewController id="sXM-Nr-wrk" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UB8-ai-udr">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <viewLayoutGuide key="safeArea" id="xio-CR-gdQ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w2c-JL-uQe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1127" y="1548"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8Sd-nX-IIf">
+            <objects>
+                <viewController id="fKx-wG-ScQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HiT-g2-gLq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Too-gd-niF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xnQ-Yt-xEY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1127" y="2301"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ujd-jl-X3M">
+            <objects>
+                <viewController id="J9A-jQ-YZd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e0K-ze-bFv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <viewLayoutGuide key="safeArea" id="JMg-Wv-JhN"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uZU-eJ-bNz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1127" y="3019"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="b3d-vr-CcU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Jod-rv-QkQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SQx-72-O72">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0Hg-v2-udA" kind="relationship" relationship="rootViewController" id="fFW-9L-Iai"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ghJ-RD-2Xw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-808" y="2460"/>
         </scene>
     </scenes>
 </document>
