--- a/PilkadaJateng/Layouts/InformasiPilkada.storyboard
+++ b/PilkadaJateng/Layouts/InformasiPilkada.storyboard
@@ -61,25 +61,60 @@
             </objects>
             <point key="canvasLocation" x="124" y="2460"/>
         </scene>
-        <!--View Controller-->
+        <!--PARTISIPASI-->
         <scene sceneID="amJ-Dj-ZOz">
             <objects>
-                <viewController id="sXM-Nr-wrk" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="UB8-ai-udr">
+                <viewController id="sXM-Nr-wrk" userLabel="PARTISIPASI" customClass="PartisipasiPilkadaViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UB8-ai-udr" customClass="PartisipasiPilkadaView" customModule="PilkadaJateng" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0Qg-j4-yZv">
+                                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fBz-4W-MZ9">
+                                    <size key="itemSize" width="320" height="82"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PartisipasiPilkadaCell" id="OP3-6K-Iyx">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xio-CR-gdQ" firstAttribute="trailing" secondItem="0Qg-j4-yZv" secondAttribute="trailing" id="2lc-oP-2Ga"/>
+                            <constraint firstItem="0Qg-j4-yZv" firstAttribute="top" secondItem="xio-CR-gdQ" secondAttribute="top" id="dBs-lL-2IB"/>
+                            <constraint firstItem="0Qg-j4-yZv" firstAttribute="leading" secondItem="xio-CR-gdQ" secondAttribute="leading" id="f4C-Us-Gjv"/>
+                            <constraint firstItem="xio-CR-gdQ" firstAttribute="bottom" secondItem="0Qg-j4-yZv" secondAttribute="bottom" id="zmY-km-lPP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="xio-CR-gdQ"/>
+                        <connections>
+                            <outlet property="collectionView" destination="0Qg-j4-yZv" id="5jF-YF-AWM"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="viewOutlets" destination="UB8-ai-udr" id="vDK-OM-wub"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w2c-JL-uQe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1127" y="1548"/>
         </scene>
-        <!--View Controller-->
+        <!--ANGGARAN-->
         <scene sceneID="8Sd-nX-IIf">
             <objects>
-                <viewController id="fKx-wG-ScQ" sceneMemberID="viewController">
+                <viewController id="fKx-wG-ScQ" userLabel="ANGGARAN" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HiT-g2-gLq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -91,10 +126,10 @@
             </objects>
             <point key="canvasLocation" x="1127" y="2301"/>
         </scene>
-        <!--View Controller-->
+        <!--TAHAPAN-->
         <scene sceneID="ujd-jl-X3M">
             <objects>
-                <viewController id="J9A-jQ-YZd" sceneMemberID="viewController">
+                <viewController id="J9A-jQ-YZd" userLabel="TAHAPAN" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e0K-ze-bFv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
