--- a/PilkadaJateng/Layouts/InformasiPilkada.storyboard
+++ b/PilkadaJateng/Layouts/InformasiPilkada.storyboard
@@ -144,13 +144,38 @@
         <!--TAHAPAN-->
         <scene sceneID="ujd-jl-X3M">
             <objects>
-                <viewController id="J9A-jQ-YZd" userLabel="TAHAPAN" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="e0K-ze-bFv">
+                <viewController id="J9A-jQ-YZd" userLabel="TAHAPAN" customClass="TahapanPilkadaViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e0K-ze-bFv" customClass="TahapanPilkadaView" customModule="PilkadaJateng" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lRj-l5-B3d">
+                                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7qU-hc-FxL">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="lRj-l5-B3d" firstAttribute="top" secondItem="JMg-Wv-JhN" secondAttribute="top" id="4Jr-AN-UqZ"/>
+                            <constraint firstItem="JMg-Wv-JhN" firstAttribute="trailing" secondItem="lRj-l5-B3d" secondAttribute="trailing" id="Anp-jk-dQx"/>
+                            <constraint firstItem="lRj-l5-B3d" firstAttribute="leading" secondItem="JMg-Wv-JhN" secondAttribute="leading" id="Fhx-2Y-IHI"/>
+                            <constraint firstItem="JMg-Wv-JhN" firstAttribute="bottom" secondItem="lRj-l5-B3d" secondAttribute="bottom" id="kwB-wa-Wsk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="JMg-Wv-JhN"/>
+                        <connections>
+                            <outlet property="collectionView" destination="lRj-l5-B3d" id="h3V-vw-cCj"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="viewOutlets" destination="e0K-ze-bFv" id="SMl-Wf-JlX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZU-eJ-bNz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
