--- a/PilkadaJateng/Layouts/Base.lproj/Main.storyboard
+++ b/PilkadaJateng/Layouts/Base.lproj/Main.storyboard
@@ -101,13 +101,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wJC-ZT-EWk">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="431"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                                 <color key="backgroundColor" red="1" green="0.71896552338168074" blue="0.50342366385314341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.64264322853053124" blue="0.99947825394796708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wJC-ZT-EWk" firstAttribute="top" secondItem="fhu-pz-yQu" secondAttribute="top" id="6vX-k3-wMm"/>
+                            <constraint firstItem="wJC-ZT-EWk" firstAttribute="top" secondItem="Ojk-tt-VWS" secondAttribute="top" id="6vX-k3-wMm"/>
                             <constraint firstItem="Ojk-tt-VWS" firstAttribute="bottom" secondItem="wJC-ZT-EWk" secondAttribute="bottom" id="Xq0-U7-ymT"/>
                             <constraint firstItem="wJC-ZT-EWk" firstAttribute="leading" secondItem="Ojk-tt-VWS" secondAttribute="leading" id="enU-AY-hsZ"/>
                             <constraint firstItem="Ojk-tt-VWS" firstAttribute="trailing" secondItem="wJC-ZT-EWk" secondAttribute="trailing" id="soB-Yb-VHG"/>
@@ -120,11 +120,12 @@
                     <tabBarItem key="tabBarItem" title="Berita" badgeValue="2" id="Rgk-Bx-Dwp"/>
                     <connections>
                         <outlet property="viewOutlets" destination="fhu-pz-yQu" id="JiI-mY-4ac"/>
+                        <segue destination="VwX-dG-gyk" kind="show" identifier="WebViewController" id="362-m5-s3z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3aS-ww-4tA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="583" y="865"/>
+            <point key="canvasLocation" x="581.25" y="865"/>
         </scene>
         <!--CHAT-->
         <scene sceneID="huB-dF-cXY">
@@ -179,21 +180,61 @@
             </objects>
             <point key="canvasLocation" x="1001" y="98"/>
         </scene>
-        <!--InformasiPilkada-->
+        <!--INFORMASI PILKADA-->
         <scene sceneID="hfO-BX-0gL">
             <objects>
-                <viewControllerPlaceholder storyboardName="InformasiPilkada" id="X2n-NB-XJq" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="InformasiPilkada" id="X2n-NB-XJq" userLabel="INFORMASI PILKADA" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i3C-B3-wWq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-467" y="1776"/>
         </scene>
-        <!--InformasiCalon-->
+        <!--INFORMASI CALON-->
         <scene sceneID="pOz-Wd-YRd">
             <objects>
-                <viewControllerPlaceholder storyboardName="InformasiCalon" id="L0X-FA-B6e" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="InformasiCalon" id="L0X-FA-B6e" userLabel="INFORMASI CALON" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A6k-8a-Ezw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="233" y="1773"/>
+        </scene>
+        <!--WEB VIEW-->
+        <scene sceneID="cDI-7g-1u5">
+            <objects>
+                <viewController id="uwx-B8-ClZ" userLabel="WEB VIEW" customClass="WebViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ORF-bj-KMo">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="0hW-6A-VCJ"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="mtg-ZE-4vS">
+                        <barButtonItem key="leftBarButtonItem" title="Tutup" id="EF5-h7-e82">
+                            <connections>
+                                <action selector="cancelBarButtonItem:" destination="uwx-B8-ClZ" id="XiN-tp-33X"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iwa-AK-Bn1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="870" y="2444"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="L1h-gg-qjz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VwX-dG-gyk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kQw-mj-gKU">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uwx-B8-ClZ" kind="relationship" relationship="rootViewController" id="Yh6-bH-dlG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z0R-Yn-zX3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="870" y="1716.25"/>
         </scene>
     </scenes>
 </document>
