--- a/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
+++ b/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
                                 <color key="backgroundColor" red="1" green="0.71896552338168074" blue="0.50342366385314341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.64264322853053124" blue="0.99947825394796708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wJC-ZT-EWk" firstAttribute="top" secondItem="Ojk-tt-VWS" secondAttribute="top" id="6vX-k3-wMm"/>
                             <constraint firstItem="Ojk-tt-VWS" firstAttribute="bottom" secondItem="wJC-ZT-EWk" secondAttribute="bottom" id="Xq0-U7-ymT"/>
@@ -127,37 +127,40 @@
             </objects>
             <point key="canvasLocation" x="581.25" y="865"/>
         </scene>
-        <!--CHAT-->
-        <scene sceneID="huB-dF-cXY">
-            <objects>
-                <viewController id="s7Y-4r-XRe" userLabel="CHAT" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="c2M-Pt-9aL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="IJl-Ge-hu8"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Diskusi" badgeValue="3" id="W0R-dc-4ld"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5wb-Tt-vNw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1493" y="865"/>
-        </scene>
-        <!--BERITA-->
+        <!--TIPS-->
         <scene sceneID="QhN-SF-DJi">
             <objects>
-                <viewController id="wmt-qd-Qhb" userLabel="BERITA" sceneMemberID="viewController">
+                <viewController id="wmt-qd-Qhb" userLabel="TIPS" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="i5R-IP-rfc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Dsk-ja-tzJ">
+                                <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YJn-7s-zF9">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UlQ-9v-09y" firstAttribute="trailing" secondItem="Dsk-ja-tzJ" secondAttribute="trailing" id="1AO-Wb-8AJ"/>
+                            <constraint firstItem="Dsk-ja-tzJ" firstAttribute="top" secondItem="UlQ-9v-09y" secondAttribute="top" id="9gt-RK-hBB"/>
+                            <constraint firstItem="UlQ-9v-09y" firstAttribute="bottom" secondItem="Dsk-ja-tzJ" secondAttribute="bottom" id="CSw-wV-ce1"/>
+                            <constraint firstItem="Dsk-ja-tzJ" firstAttribute="leading" secondItem="UlQ-9v-09y" secondAttribute="leading" id="sUo-h1-VnI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="UlQ-9v-09y"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Tips" badgeValue="4" id="Eat-WA-Icm"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Mv-nE-poy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2304" y="865"/>
+            <point key="canvasLocation" x="2216" y="865"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="O63-Bc-1N1">
@@ -172,8 +175,8 @@
                     <connections>
                         <segue destination="xZw-HS-fm8" kind="relationship" relationship="viewControllers" id="EvK-y8-LER"/>
                         <segue destination="rXv-ZP-PZT" kind="relationship" relationship="viewControllers" id="GRM-Rx-SMv"/>
-                        <segue destination="s7Y-4r-XRe" kind="relationship" relationship="viewControllers" id="pkV-eW-mPw"/>
-                        <segue destination="wmt-qd-Qhb" kind="relationship" relationship="viewControllers" id="9Mt-Ds-Qwk"/>
+                        <segue destination="nuB-pz-Y63" kind="relationship" relationship="viewControllers" id="879-2B-3ta"/>
+                        <segue destination="wmt-qd-Qhb" kind="relationship" relationship="viewControllers" id="Dph-mu-1r0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fjI-nZ-XWa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -186,7 +189,7 @@
                 <viewControllerPlaceholder storyboardName="InformasiPilkada" id="X2n-NB-XJq" userLabel="INFORMASI PILKADA" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i3C-B3-wWq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-467" y="1776"/>
+            <point key="canvasLocation" x="-325" y="1326"/>
         </scene>
         <!--INFORMASI CALON-->
         <scene sceneID="pOz-Wd-YRd">
@@ -194,7 +197,7 @@
                 <viewControllerPlaceholder storyboardName="InformasiCalon" id="L0X-FA-B6e" userLabel="INFORMASI CALON" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A6k-8a-Ezw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="233" y="1773"/>
+            <point key="canvasLocation" x="-13" y="1326"/>
         </scene>
         <!--WEB VIEW-->
         <scene sceneID="cDI-7g-1u5">
@@ -216,7 +219,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iwa-AK-Bn1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="870" y="2444"/>
+            <point key="canvasLocation" x="581" y="2270"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="L1h-gg-qjz">
@@ -234,7 +237,24 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z0R-Yn-zX3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="870" y="1716.25"/>
+            <point key="canvasLocation" x="581" y="1575"/>
+        </scene>
+        <!--MEDIA RAKYAT-->
+        <scene sceneID="XBh-VE-V6S">
+            <objects>
+                <viewController id="nuB-pz-Y63" userLabel="MEDIA RAKYAT" customClass="MediaRakyatPagerTabStrip" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UkT-dx-ssF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="N4u-m2-sew"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Media Rakyat" badgeValue="3" id="kW4-CX-ul8"/>
+                    <navigationItem key="navigationItem" id="UMA-ka-ENc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sWy-w9-A45" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1436" y="865"/>
         </scene>
     </scenes>
 </document>
